Add app constants, keys, and strings
Detailed Explanation:

This commit adds several utility classes to the app:

1. `AppConstants`: Defines constant values used throughout the app, such as mock email and password.
2. `AppKeys`: Defines constant keys used for shared preferences storage, such as `email`, `password`, and `isLoggedIn`.
3. `AppStrings`: Defines constant strings used in the app, such as field hints, password requirements, and error messages. These strings are localized using the `S` class generated from the `intl` package.

The commit also updates the following files:

1. `PasswordValidationIndicator`: Uses the `AppStrings` class to display the appropriate password requirements.
2. `FormValidationProvider`: Uses the `AppKeys` class to store form errors in the map.
3. `AuthRepositoryImpl`: Uses the `AppConstants` and `AppKeys` classes for login validation and shared preferences storage.
4. `LoginEmailField` and `LoginPasswordField`: Use the `AppStrings` class to display the appropriate field hints.
5. `LoginButton`: Uses the `AppStrings` class to display the login button text.
6. `main.dart`: Ensures the app uses the user's default locale by default, and falls back to the `en` locale if the language cannot be determined.

These changes help to centralize and organize the app's constants, keys, and strings, making the codebase more maintainable and easier to localize.

--- a/lib/l10n/intl_ar.arb
+++ b/lib/l10n/intl_ar.arb
@@ -1,1 +1,11 @@
-{}
+{
+    "emailFieldHint": "البريد الإلكتروني",
+    "passwordFieldHint": "كلمة المرور",
+    "passwordRequirementAtLeast8Chars": "ثمانية أحرف على الأقل",
+    "passwordRequirementOneLowerCase": "حرف صغير واحد",
+    "passwordRequirementOneUpperCase": "حرف كبير واحد",
+    "passwordRequirementOneSpecialChar": "حرف خاص واحد",
+    "passwordRequirementOneNumber": "رقم واحد",
+    "loginButton": "تسجيل الدخول",
+    "errorInvalidCredentials": "بيانات تسجبل الدخول غير صالحة"
+}
