Add pagination support and update movie repository
Implemented pagination support by adding `PaginationModel` and `ResourceModel`.

Updated the `MovieRepository` to return `ResourceModel` which includes pagination data.

Modified `DioClient`, `ResponseInterceptor`, and various providers to handle pagination and loading more movies.

Added necessary localization strings for pagination error messages.

--- a/lib/l10n/intl_ar.arb
+++ b/lib/l10n/intl_ar.arb
@@ -40,5 +40,6 @@
     "settingsTitle": "الإعدادات",
     "languageTitle": "اللغة",
 
-    "popularMoviesTitle": "الأفلام الشهيرة"
+    "popularMoviesTitle": "الأفلام الشهيرة",
+    "fetchNextPageError": "تعذر جلب الصفحة التالية. يرجى المحاولة لاحقاً."
 }
